# python-kicad

./: .gitignore  LICENSE  README.md  kicad_sch.py  main.py  pyproject.toml
pykicad/: main.py
pykicad/models/: kicad_sch.py  netlist.py  schematic.py
pykicad/parser/: kicad_sexp.py
src/: main.py
src/parser/: kicad_sexp.py
testdata/: sample.kicad_sch
tests/: README.md  __init__.py  test_edge_cases.py  test_integration.py  test_models.py  test_parser.py
